# Aether

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
app/: main.cpp  test_scenarios.cpp  test_scenarios.hpp
app/ui/: main.slint
engine/: common_header.hpp  engine_configs.cpp  engine_configs.hpp  responses.hpp
engine/collision/: box.cpp  box_box.cpp  box_ramp.cpp  collision.hpp  contact.hpp  contactmanifold.hpp  obb.hpp  ramp_ramp.cpp  ramp_sphere.cpp  sphere_box.cpp  sphere_ramp.cpp  sphere_sphere.cpp
engine/collision/manifolds/: buildBoxBoxManifold.cpp  buildBoxSphereManifold.cpp  buildRampBoxManifold.cpp  buildRampRampManifold.cpp  buildRampSphereManifold.cpp  buildSphereSphereManifold.cpp  manifold_builders.hpp
engine/constraints/: distance_constraints.hpp
engine/core/: bodyid.hpp  box_collider.hpp  buoyancy.cpp  buoyancy.hpp  collider.hpp  ramp_collider.hpp  rigidbody.cpp  rigidbody.hpp
engine/math/: mat.cpp  mat3.hpp  quat.cpp  quat.hpp  vec3.cpp  vec3.hpp
engine/world/: physicsworld.cpp  physicsworld.hpp
release/linux/: Aether_Test
renderer/: aether_theme.cpp  aether_theme.hpp  bodymenu.cpp  bodymenu.hpp  bodyselection.hpp  bodyshaders.cpp  bodyshaders.hpp  camera.cpp  camera.hpp  drawbodies.cpp  drawbodies.hpp  drawconstraints.cpp  drawconstraints.hpp  window.cpp  window.hpp
